Fixes for incognito mode, fixes for when schedule contains classes with no times

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7038,7 +7038,7 @@ textarea.materialize-textarea {
 }
 
 .switch label input[type=checkbox]:checked + .lever {
-  background-color: #84c7c1;
+  background-color: #2962FF;
 }
 
 .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
@@ -7046,7 +7046,7 @@ textarea.materialize-textarea {
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #26a69a;
+  background-color: #448aF0;
 }
 
 .switch label .lever {
